Add support for lazy loading and improve image handling in Multi Image module
- Introduced lazy loading functionality using Intersection Observer.
- Enhanced image description in English and Dutch language files.
- Updated CSS for better visibility control of images.
- Refactored JavaScript to manage image visibility based on breakpoints.
- Cleaned up XML configuration and added lazy loading option.
- Added .gitignore for prepros.config.

--- a/prepros.config
+++ b/prepros.config
@@ -872,7 +872,22 @@
       {
         "file": "media/css/mod_multi_image.css",
         "config": {
-          "autoCompile": true
+          "autoCompile": true,
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "media/js/mod_multi_image.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": true
+            }
+          }
         }
       }
     ]
